--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,38 @@ body {
   flex-direction: column;
 }
 
+.registerLoginContainer {
+  width: 400px;
+}
+
+.usernameInput {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.passwordInput {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #04aa6d;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
 .createPostForm .contentForm {
   flex: 60%;
 }
